(tests
 (names test_lambda_streams test_lambda_streams_lwt test_lambda_streams_async)
 (libraries
  alcotest
  alcotest-lwt
  alcotest-async
  async
  async_kernel
  async_unix
  core
  core_kernel
  lwt
  lwt.unix
  fmt
  lambda_streams
  lambda_streams_lwt
  lambda_streams_async)
 (action (run %{test})))
